Cabal-version:       3.0
Name:                http-types
Version:             0.13
Synopsis:            Generic HTTP types for Haskell (for both client and server code).
Description:         Types and functions to describe and handle HTTP concepts.
                     Including "methods", "headers", "query strings", "paths" and "HTTP versions".
Homepage:            https://github.com/Vlix/http-types
License:             BSD-3-Clause
License-file:        LICENSE
Author:              Aristid Breitkreuz, Michael Snoyman
Maintainer:          felix.paulusma@gmail.com
Copyright:           (C) 2011 Aristid Breitkreuz, (C) 2023 Felix Paulusma
Category:            Network, Web
Build-type:          Simple
Extra-source-files:
    README.md
    CHANGELOG.md
    test/.golden/urlEncode-path/golden
    test/.golden/urlEncode-query/golden

Source-repository this
  type: git
  location: https://github.com/Vlix/http-types.git
  tag: v0.13

Source-repository head
  type: git
  location: https://github.com/Vlix/http-types.git

Library
  Exposed-modules:     Network.HTTP.Types
                       Network.HTTP.Types.Header
                       Network.HTTP.Types.Method
                       Network.HTTP.Types.QueryLike
                       Network.HTTP.Types.Status
                       Network.HTTP.Types.URI
                       Network.HTTP.Types.Version
  GHC-Options:         -Wall
  Build-depends:       base >= 4 && < 5,
                       bytestring >=0.10.8.0 && <1.0,
                       array >=0.2 && <0.6,
                       case-insensitive >=0.2 && <1.3,
                       text >= 0.11.0.2,
                       word8 < 0.2
  Default-language:    Haskell2010

Test-suite spec
  main-is:             Spec.hs
  hs-source-dirs:      test
  other-modules:       Network.HTTP.Types.HeaderSpec
                       Network.HTTP.Types.MethodSpec
                       Network.HTTP.Types.StatusSpec
                       Network.HTTP.Types.URISpec
                       Network.HTTP.Types.VersionSpec
  type:                exitcode-stdio-1.0
  GHC-Options:         -Wall
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover
  build-depends:       base,
                       bytestring,
                       case-insensitive,
                       filepath,
                       hspec >= 1.3,
                       hspec-golden,
                       http-types,
                       QuickCheck,
                       quickcheck-instances,
                       text

Test-Suite doctests
  main-is:             doctests.hs
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -Wall
  default-language:    Haskell2010
  build-depends:       base, doctest >= 0.9.3
