Cabal-version:       2.2
Name:                http-types
Version:             0.13.0
Synopsis:            Generic HTTP types for Haskell (for both client and server code).
Description:         Types and functions to describe and handle HTTP concepts.
                     Including "methods", "headers", "query strings", "paths" and "HTTP versions".
Homepage:            https://github.com/Vlix/http-types
License:             BSD-3-Clause
License-file:        LICENSE
Author:              Aristid Breitkreuz, Michael Snoyman
Maintainer:          felix.paulusma@gmail.com
Copyright:           (C) 2011 Aristid Breitkreuz, (C) 2023 Felix Paulusma
Category:            Network, Web
Build-type:          Simple
Tested-with:
    GHC == 7.10.3, GHC == 9.6.7, GHC == 9.8.4, GHC == 9.10.3, GHC == 9.12.4, GHC == 9.14.1
Extra-source-files:
    test/.golden/urlEncode-path/golden
    test/.golden/urlEncode-query/golden
Extra-doc-files:
    README.md
    CHANGELOG.md

Source-repository this
  type: git
  location: https://github.com/Vlix/http-types.git
  tag: v0.12.5

Source-repository head
  type: git
  location: https://github.com/Vlix/http-types.git

Library
  hs-source-dirs:      src
  Exposed-modules:     Network.HTTP.Header
                       Network.HTTP.Types
                       Network.HTTP.Types.Header
                       Network.HTTP.Types.Method
                       Network.HTTP.Types.QueryLike
                       Network.HTTP.Types.Status
                       Network.HTTP.Types.URI
                       Network.HTTP.Types.Version
  Other-modules:       Network.HTTP.LowLevel
                       Network.HTTP.Header.Internal
  GHC-Options:         -Wall
  Build-depends:       base >= 4.17 && < 5,
                       bytestring >= 0.10.6.0 && < 1,
                       array >= 0.5.1.0 && < 0.6,
                       case-insensitive >= 1.2.0.2 && < 1.3,
                       text >= 1.2.0.2 && < 3
  Default-language:    Haskell2010
  if impl(ghc < 9.4)
    build-depends: data-array-byte

Test-suite spec
  main-is:             Spec.hs
  hs-source-dirs:      test, src
  other-modules:       Network.HTTP.Header
                       Network.HTTP.HeaderSpec
                       Network.HTTP.Header.Internal
                       Network.HTTP.LowLevel
                       Network.HTTP.Types
                       Network.HTTP.Types.Header
                       Network.HTTP.Types.HeaderSpec
                       Network.HTTP.Types.Method
                       Network.HTTP.Types.MethodSpec
                       Network.HTTP.Types.QueryLike
                       Network.HTTP.Types.Status
                       Network.HTTP.Types.StatusSpec
                       Network.HTTP.Types.URI
                       Network.HTTP.Types.URISpec
                       Network.HTTP.Types.Version
                       Network.HTTP.Types.VersionSpec
  type:                exitcode-stdio-1.0
  GHC-Options:         -Wall
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover
  build-depends:       base < 5,
                       array,
                       bytestring,
                       case-insensitive,
                       filepath,
                       hspec >= 1.3,
                       hspec-golden >= 0.2,
                       QuickCheck,
                       quickcheck-instances,
                       text

Test-Suite doctests
  main-is:             doctests.hs
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -Wall
  default-language:    Haskell2010
  build-depends:       base < 5, doctest >= 0.19.0

Benchmark http-bench
  main-is:            Bench.hs
  hs-source-dirs:     bench
  type:               exitcode-stdio-1.0
  -- other-modules:
  GHC-Options:        -Wall -threaded -O2
  default-language:   Haskell2010
  build-depends:      base,
                      bytestring,
                      case-insensitive,
                      deepseq,
                      http-types,
                      tasty-bench
